Autocomplete: fix fuzzy matching spacing

--- a/docs/src/app/(docs)/react/components/autocomplete/demos/fuzzy-matching/css-modules/index.module.css
+++ b/docs/src/app/(docs)/react/components/autocomplete/demos/fuzzy-matching/css-modules/index.module.css
@@ -87,6 +87,10 @@
   overflow-y: auto;
   overscroll-behavior: contain;
   scroll-padding-block: 0.25rem;
+
+  &:empty {
+    padding: 0;
+  }
 }
 
 .Item {
@@ -153,7 +157,7 @@
   font-size: 0.875rem;
   line-height: 1rem;
   color: oklch(55.6% 0 0deg);
-  padding: 0.5rem 1rem 0.5rem 0.5rem;
+  padding: 0.75rem 0.5rem;
 
   @media (prefers-color-scheme: dark) {
     color: oklch(70.8% 0 0deg);
